--- a/ERPWeb/Views/AgroConfiguration/_SalesCommission.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_SalesCommission.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="col-md-12">
-    <table class="table table-responsive-lg table-bordered table-striped table-hover text-sm">
+    <table class="table table-bordered table-striped table-hover table-sm text-sm">
         <thead class="btn-dark">
             <tr class="text-center">
                 <td style="vertical-align:middle">#Sl</td>
