--- a/ERPWeb/Views/AgroConfiguration/MRawMaterialIssueAcceptList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/MRawMaterialIssueAcceptList.cshtml
@@ -66,7 +66,7 @@
 <div class="modal fade" id="PurchaseDetails" role="dialog" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <div class="modal-header alert-secondary">
+            <div class="modal-header bg-gradient-gray-dark">
                 <h4 id="modalHeading" class="modal-title">Raw Material Issue Details</h4>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
