--- a/ERPWeb/Views/AgroConfiguration/_SalesReturnListview.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_SalesReturnListview.cshtml
@@ -5,11 +5,30 @@
     ViewBag.Title = "List of SalesReturn";
     var SL = 0;
 }
+<style>
+
+
+    table.tadd tr th {
+        background-color: black !important;
+        
+        color: white !important;
+    }
+    table.tablesubtotal tr th {
+        background-color: white !important;
+        color: white !important;
+    }
+
+
+
+</style>
+
+
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
-        <table class="table table-bordered table-striped table-hover table-sm text-sm" id="tblretunrData">
-            <thead class="btn-dark">
-                <tr class="text-center">
+    <div class="table-responsive p-0 " style="height: 600px;">
+        <table class="table table-head-fixed table-sm text-sm text-nowrap tadd" id="tblList">
+            <thead>
+                <tr class="text-center" style="color:black">
+
                     <th style="vertical-align:middle">#SL</th>
                     <th style="vertical-align:middle" class="hide"></th>
                     <th style="vertical-align:middle" class="hide"></th>
@@ -20,7 +39,7 @@
                     <th style="vertical-align:middle">Unit Price</th>
                     <th style="vertical-align:middle">Return Date</th>
                     <th style="vertical-align:middle">Status</th>
-                    @*<th style="vertical-align:middle">Action</th>*@
+
                 </tr>
             </thead>
             <tbody>
@@ -30,25 +49,25 @@
                     badge = item.Status == "NOTADJUST" ? "badge bg-danger" : item.Status == "ADJUST" ? "badge bg-success" : "";
 
                     SL = SL + 1;
-                <tr>
+                    <tr>
 
-                    <td class="text-center text-bold">@SL</td>
-                    <td class="hide">@item.FinishGoodProductInfoId</td>
-                    <td class="hide">@item.ProductSalesInfoId</td>
-                    <td class="text-center">@item.InvoiceNo</td>
-                    <td class="text-center">@item.FinishGoodProductName</td>
-                    <td class="text-center">@item.QtyKG</td>
-                    <td class="text-center">@item.BoxQuanity</td>
-                    <td class="text-center">@item.ReturnPerUnitPrice</td>
-                    <td class="text-center">@item.ReturnDate.Value.ToString("dd-MMM-yyyy")</td>
-                    @*<td class="text-center">@item.Status</td>*@
-                    <td class="text-center" data-val="@item.Status">
-                        <span class="@badge">@item.Status</span>
-                    </td>
+                        <td class="text-center text-bold">@SL</td>
+                        <td class="hide">@item.FinishGoodProductInfoId</td>
+                        <td class="hide">@item.ProductSalesInfoId</td>
+                        <td class="text-center">@item.InvoiceNo</td>
+                        <td class="text-center">@item.FinishGoodProductName</td>
+                        <td class="text-center">@item.QtyKG</td>
+                        <td class="text-center">@item.BoxQuanity</td>
+                        <td class="text-center">@item.ReturnPerUnitPrice</td>
+                        <td class="text-center">@item.ReturnDate.Value.ToString("dd-MMM-yyyy")</td>
+                        @*<td class="text-center">@item.Status</td>*@
+                        <td class="text-center" data-val="@item.Status">
+                            <span class="@badge">@item.Status</span>
+                        </td>
 
 
 
-                </tr>
+                    </tr>
                 }
 
                 @if (Model.Count() == 0)
@@ -60,7 +79,28 @@
                     </tr>
                 }
             </tbody>
+
+        </table>
+        <table class="table table-head-fixed text-nowrap tablesubtotal">
+            <thead>
+                <tr class="text-center">
+
+                    <th>Total</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th class="totalqty">0</th>
+                    <th class="totaldis">0</th>
+                    <th class="totalsub">0</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody class="bg-gradient-gray"></tbody>
         </table>
     </div>
-
 </div>
+
+
+    @*Total*@
+
+    @*Total*@
