--- a/ERPWeb/Views/Shared/_AdminDashboard.cshtml
+++ b/ERPWeb/Views/Shared/_AdminDashboard.cshtml
@@ -147,35 +147,44 @@
                 <div class="sidebar">
                     <!-- Sidebar user panel (optional) -->
                     <!--<div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                        <div class="image">-->
+        <div class="image">-->
                     @*<img src="~/wwwroot/assets/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">*@
                     <!--<img class="profile-user-img img-fluid img-circle"
-                                 src="~/Content/dist/img/userIcon.png"
-                                 alt="User profile picture">
-                        </div>
-                        <div class="info">
-                            <a href="#" class="d-block">@User.UserName</a>
-                        </div>
-                    </div>-->
+                 src="~/Content/dist/img/userIcon.png"
+                 alt="User profile picture">
+        </div>
+        <div class="info">
+            <a href="#" class="d-block">@User.UserName</a>
+        </div>
+    </div>-->
                     <!-- SidebarSearch Form -->
+                    @*<div class="form-inline">
+            <div class="input-group" data-widget="sidebar-search">
+                <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
+                <div class="input-group-append">
+                    <button class="btn btn-sidebar">
+                        <i class="fas fa-search fa-fw"></i>
+                    </button>
+                </div>
+            </div>
+        </div>*@
                     <div class="form-inline">
-                        <div class="input-group" data-widget="sidebar-search">
-                            <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
-                            <div class="input-group-append">
-                                <button class="btn btn-sidebar">
-                                    <i class="fas fa-search fa-fw"></i>
-                                </button>
-                            </div>
+
+                        <div class="input-group">
+                            @*<button type="button" class="form-control form-control-sidebar btn btn-light">DashBoard</button>*@
+                            <a href="/User/Index" class="form-control form-control-sidebar btn btn-light" id="btnAddNew">DashBoard</a>
                         </div>
+                           
+
                     </div>
 
-                    <!-- Sidebar Menu -->
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        { Html.RenderAction("GetUserMenus", "Common"); }
-                    }
-                    <!-- /.sidebar-menu -->
-                </div>
+                        <!-- Sidebar Menu -->
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            { Html.RenderAction("GetUserMenus", "Common"); }
+                        }
+                        <!-- /.sidebar-menu -->
+                    </div>
                 <!-- /.sidebar -->
             </aside>
 
