--- a/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
@@ -255,25 +255,27 @@
              $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveSalesReturn', data, getToken())).then(function (res, status) {
                  debugger;
 
-                 @*if (res.IsSuccess === true) {
+                 if (res.IsSuccess === true) {
+                     debugger;
                                 $('.toastrDefaultSuccess').trigger('click');
                                 var InvoiceNo = res.File;
+                    // var ReturnDate = res.File;
                      window.open('/AgroConfiguration/GetSalesReturnReportSave?InvoiceNo=' + InvoiceNo, '_blank');
-                                
+
                                 setTimeout(function () {
                                     redirectPage('@Url.Action("SalesReturnList")');
                                 }, 500);
-                               
-                            }*@
+
+                            }
 
 
-                if (res === true) {
-                   
+                @*if (res === true) {
+
                     $('.toastrDefaultSuccess').trigger('click');
                     setTimeout(function () {
                         redirectPage('@Url.Action("SalesReturnList")');
                     }, 1000);
-                }
+                }*@
                 else {
                     $('.toastrDefaultError').trigger('click');
                 }
