--- a/ERPWeb/Views/Shared/_AdminDashboard.cshtml
+++ b/ERPWeb/Views/Shared/_AdminDashboard.cshtml
@@ -172,7 +172,8 @@
 
                         <div class="input-group">
                             @*<button type="button" class="form-control form-control-sidebar btn btn-light">DashBoard</button>*@
-                            <a href="/User/Index" class="form-control form-control-sidebar btn btn-light" id="btnAddNew">DashBoard</a>
+                            <a href="/User/Index" style="background-color: #343a40;
+color: #ced4da;" class="form-control form-control-sidebar btn btn-light" id="btnAddNew">DashBoard</a>
                         </div>
                            
 
