--- a/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
@@ -199,6 +199,7 @@
             debugger;
 
             var data = { RawMaterialId: ddlRawMaterialName.val() };
+            var productQty = { FinishGoodProductId: TryParseInt(ddlProductName.val(), 0),RawMaterialId: ddlRawMaterialName.val(), FGRQty: txtProductQty.val(), UnitId: ddlUnit1.val(), }
 
             $.when(getReqWithData('Html', "Get", "/AgroConfiguration/RawMaterialStockLoadUnitName", data)).then(function (res, status) {
                 // debugger;
@@ -209,26 +210,27 @@
                 ddlUnitName.val(unit);
 
             });
-            $.when(getReqWithData('Html', "Get", "/AgroConfiguration/RawMaterialStockLoadUnitID", data)).then(function (res, status) {
-                //  debugger;
+            $.when(getReqWithData('Html', "Get", "/AgroConfiguration/RawMaterialConverter", productQty)).then(function (res, status) {
+                debugger;
 
-                consoleLog(res.replace(/['"]+/g, ''));
+                //consoleLog(res.replace(/['"]+/g, ''));
                 var unit = res.replace(/['"]+/g, '');
-                ddlUnitID.val(res.UnitIDd);
-                ddlUnitID.val(unit);
+                txtRawMaterialQty.val(res.RMQTY);
+                txtRawMaterialQty.val(unit);
 
             });
+            //$.when(getReqWithData('Html', "Get", "/AgroConfiguration/RawMaterialStockLoadUnitID", data)).then(function (res, status) {
+            //    //  debugger;
 
-        })
-        //    $.when(getReqWithData('Html', "Get", "/AgroConfiguration/GetRawMaterialFinishGoodRecipeLoadProductUnit", data)).then(function (res, status) {
-        //        // debugger;
-        //        consoleLog(res.replace(/['"]+/g, ''));
-        //        var unit = res.replace(/['"]+/g, '');
-        //        ddlUnit.val(unit);
-        //        //targetQty.val();
-        //    });
+            //    consoleLog(res.replace(/['"]+/g, ''));
+            //    var unit = res.replace(/['"]+/g, '');
+            //    ddlUnitID.val(res.UnitIDd);
+            //    ddlUnitID.val(unit);
 
-        //})
+            //});
+
+        });
+        
 
 
 
